--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -15,8 +15,8 @@
 		<img src="{% static 'images/116.png' %}" alt="">
 	</div>
 
-	<form action="" class="flex items-center gap-3">
-		<input name="city" type="text" class="bg-white/20 px-5 py-1 rounded-2xl" placeholder="Enter City Name">
+	<form action="" class="flex items-center gap-3 hover:scale-105 delay-500 ease-in-out">
+		<input name="city" type="text" class="bg-white/20 px-5 py-1 rounded-2xl placeholder:text-white/60 placeholder:font-bold focus:outline-white text-white" placeholder="Enter City Name" >
 		<button><i class='bxr bx-search text-white text-2xl bg-white/20 p-3 rounded-full'></i></button>
 	</form>
 
@@ -25,7 +25,7 @@
 			⚠ {{ error|capfirst }}
 		</div>
 	{% else %}
-		<div class="flex bg-white/20 p-5 w-[60%] justify-between rounded-2xl">
+		<div class="flex bg-white/20 p-5 w-sm justify-between rounded-2xl hover:scale-105 delay-500 ease-in-out">
 			<div class="text-white">
 				<p class="text-2xl font-bold ">{{temperature}}&deg</p>
 				<p class="font-semibold text-sm">Now</p>
@@ -35,7 +35,45 @@
 		</div>
 	{% endif %}
 
-	<div class="flex p-3 bg-[#65CEE2]" >
+
+		<!-- second Block -->
+
+	<div class="flex p-5 bg-[#65CEE2] rounded-2xl gap-7 w-sm hover:scale-105 delay-500 ease-in-out" >
+		<div class="flex flex-col text-white justify-between ">
+			<img src="{{icon_url}}" alt="">
+			<div class="mb-3">
+				<p class="text-2xl font-bold ">Clouds</p>
+				<p class="font-semibold">few clouds</p>
+			</div>
+			
+		</div>
+		<div class="flex flex-col gap-3">
+			<div class="p-3 bg-white/20 text-white flex items-center gap-3 rounded-2xl ">
+				<i class='bx  bx-thermometer'  ></i> 
+				<div class="flex flex-col">
+					<p class="font-bold text-2xl">{{temperature}}&deg</p>
+					<p class="text-sm text-right">Temperature</p>
+				</div>
+			</div>
+
+			<div class="p-3 bg-white/20 text-white flex items-center gap-3 rounded-2xl ">
+				
+				<i class='bx  bx-tachometer'  ></i>  
+				<div class="flex flex-col">
+					<p class="font-bold text-2xl">{{wind_speed}}m/s</p>
+					<p class="text-sm text-right items-center">Wind Speed</p>
+				</div>
+			</div>
+
+			<div class="p-3 bg-white/20 text-white flex items-center gap-3 rounded-2xl ">
+				
+				<i class='bx  bx-cloud-rain-wind'  ></i>  
+				<div class="flex flex-col">
+					<p class="font-bold text-2xl">{{humidity}}%</p>
+					<p class="text-sm text-right items-center">Humidity</p>
+				</div>
+			</div>
+		</div>
 		
 	</div>
 
